Add customer feedback form with submission handling

--- a/frontend/survey-form/index.html
+++ b/frontend/survey-form/index.html
@@ -1,1 +1,78 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Insights Hub – Feedback Form</title>
+</head>
+<body>
+  <h1>Customer Feedback</h1>
+
+  <form id="feedback-form">
+    <label for="rating">Rating (1–5):</label>
+    <select id="rating" name="rating" required>
+      <option value="">Select…</option>
+      <option value="1">1 - Very dissatisfied</option>
+      <option value="2">2</option>
+      <option value="3">3 - Neutral</option>
+      <option value="4">4</option>
+      <option value="5">5 - Very satisfied</option>
+    </select>
+    <br /><br />
+
+    <label for="feedback_text">Feedback:</label><br />
+    <textarea
+      id="feedback_text"
+      name="feedback_text"
+      rows="4"
+      cols="50"
+      required
+      placeholder="Tell us what worked well or what could be improved..."
+    ></textarea>
+    <br /><br />
+
+    <label for="topic">Topic (optional):</label>
+    <input
+      type="text"
+      id="topic"
+      name="topic"
+      placeholder="e.g., delivery, checkout, support"
+    />
+    <br /><br />
+
+    <button type="submit">Submit Feedback</button>
+  </form>
+
+  <script>
+    const form = document.getElementById("feedback-form");
+
+    form.addEventListener("submit", async (event) => {
+      event.preventDefault();
+
+      const payload = {
+        rating: parseInt(form.rating.value, 10),
+        feedback_text: form.feedback_text.value,
+        topic: form.topic.value || null,
+        metadata: {
+          // simple example metadata
+          userAgent: navigator.userAgent,
+          locale: navigator.language
+        }
+      };
+
+      console.log("Feedback", payload);
+
+      // In Week 2, we will replace this console.log with a real call to API Gateway:
+      // const response = await fetch("YOUR_API_GATEWAY_URL/feedback", {
+      //   method: "POST",
+      //   headers: { "Content-Type": "application/json" },
+      //   body: JSON.stringify(payload),
+      // });
+      // const data = await response.json();
+      // alert(data.message);
+
+      alert("Feedback captured in browser.");
+    });
+  </script>
+</body>
+</html>
 
