--- a/frontend/survey-form/index.html
+++ b/frontend/survey-form/index.html
@@ -1,3 +1,9 @@
+<head>
+  <meta charset="UTF-8" />
+  <title>Insights Hub – Feedback Form</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
 <body>
   <h1>Customer Feedback</h1>
 
