Implement Insights Hub frontend with analytics dashboard and feedback flow
- Created Insights page with embedded dashboard
- Added feedback submission page and updated homepage
- Refined UI styling and added branding assets

--- a/frontend/survey-form/index.html
+++ b/frontend/survey-form/index.html
@@ -1,119 +1,10 @@
+<!doctype html>
+<html>
+
 <head>
-  <meta charset="UTF-8" />
-  <title>Insights Hub – Feedback Form</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta http-equiv="refresh" content="0; url=feedback.html" />
 </head>
 
-<body>
-  <h1>Customer Feedback</h1>
+<body>Redirecting…</body>
 
-  <form id="feedback-form">
-    <label for="overall_satisfaction">Overall satisfaction (1–10):</label>
-    <select id="overall_satisfaction" name="overall_satisfaction" required>
-      <option value="">Select…</option>
-      <option value="1">1</option>
-      <option value="2">2</option>
-      <option value="3">3</option>
-      <option value="4">4</option>
-      <option value="5">5</option>
-      <option value="6">6</option>
-      <option value="7">7</option>
-      <option value="8">8</option>
-      <option value="9">9</option>
-      <option value="10">10</option>
-    </select>
-
-    <label for="speed_satisfaction">Speed of service/support (1–10):</label>
-    <select id="speed_satisfaction" name="speed_satisfaction" required>
-      <option value="">Select…</option>
-      <option value="1">1</option>
-      <option value="2">2</option>
-      <option value="3">3</option>
-      <option value="4">4</option>
-      <option value="5">5</option>
-      <option value="6">6</option>
-      <option value="7">7</option>
-      <option value="8">8</option>
-      <option value="9">9</option>
-      <option value="10">10</option>
-    </select>
-
-    <label for="recommend_likelihood">Likelihood to recommend (1–10):</label>
-    <select id="recommend_likelihood" name="recommend_likelihood" required>
-      <option value="">Select…</option>
-      <option value="1">1</option>
-      <option value="2">2</option>
-      <option value="3">3</option>
-      <option value="4">4</option>
-      <option value="5">5</option>
-      <option value="6">6</option>
-      <option value="7">7</option>
-      <option value="8">8</option>
-      <option value="9">9</option>
-      <option value="10">10</option>
-    </select>
-
-    <label for="improve_one_thing">One thing we could do better:</label>
-    <textarea id="improve_one_thing" name="improve_one_thing" rows="3" required
-      placeholder="What should we improve?"></textarea>
-
-    <label for="keep_doing_one_thing">One thing you want us to keep doing:</label>
-    <textarea id="keep_doing_one_thing" name="keep_doing_one_thing" rows="3" required
-      placeholder="What should we keep doing?"></textarea>
-
-    <label for="topic">Topic (optional):</label>
-    <input type="text" id="topic" name="topic" placeholder="e.g., delivery, checkout, support" />
-
-    <button type="submit">Submit Feedback</button>
-  </form>
-
-  <script>
-    const form = document.getElementById("feedback-form");
-    const API_URL = "https://vexh39kin7.execute-api.us-east-2.amazonaws.com/demo/feedback";
-
-    form.addEventListener("submit", async (event) => {
-      event.preventDefault();
-
-      const payload = {
-        survey_version: "short_v1",
-        ratings: {
-          overall_satisfaction: parseInt(form.overall_satisfaction.value, 10),
-          speed_satisfaction: parseInt(form.speed_satisfaction.value, 10),
-          recommend_likelihood: parseInt(form.recommend_likelihood.value, 10),
-        },
-        open_text: {
-          improve_one_thing: form.improve_one_thing.value,
-          keep_doing_one_thing: form.keep_doing_one_thing.value,
-        },
-        topic: form.topic.value || null,
-        metadata: {
-          userAgent: navigator.userAgent,
-          locale: navigator.language,
-        },
-      };
-
-      try {
-        const response = await fetch(API_URL, {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify(payload),
-        });
-
-        const data = await response.json().catch(() => ({}));
-
-        if (!response.ok) {
-          console.error("API error:", data);
-          alert("Submission failed. Check console.");
-          return;
-        }
-
-        alert(data.message || "Feedback submitted successfully!");
-        form.reset();
-      } catch (err) {
-        console.error("Network error:", err);
-        alert("Network error. Check console.");
-      }
-    });
-  </script>
-
-</body>
+</html>
